<resources>
    <string name="app_name">Food tracker</string>
    <string name="summary">Summary</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="add_food_button">Add food button</string>
    <string name="separator">/</string>
    <string name="kcal">kcal</string>
    <string name="zero">0</string>
    <string name="gram">g</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="enter_food_name">Enter food name</string>
</resources>