<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:ellipsize="end"
        android:hint="@string/enter_food_name"
        android:maxLines="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Some foods name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nutrition_facts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/nutrition_facts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nutrition_facts" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/food_calories_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/food_calories"
        app:layout_constraintEnd_toStartOf="@id/kcal_text"
        app:layout_constraintTop_toTopOf="@id/food_calories"
        tools:text="153" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/kcal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        android:text="@string/kcal"
        app:layout_constraintBottom_toBottomOf="@id/food_calories_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/food_calories_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/carbs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_calories" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/food_carbs_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/food_carbs"
        app:layout_constraintEnd_toStartOf="@id/carbs_text"
        app:layout_constraintTop_toTopOf="@id/food_carbs"
        tools:text="20" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/carbs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        android:text="@string/gram"
        app:layout_constraintBottom_toBottomOf="@id/food_carbs_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/food_carbs_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/protein"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_carbs" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/food_protein_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/food_protein"
        app:layout_constraintEnd_toStartOf="@id/protein_text"
        app:layout_constraintTop_toTopOf="@id/food_protein"
        tools:text="10" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/protein_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        android:text="@string/gram"
        app:layout_constraintBottom_toBottomOf="@id/food_protein_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/food_protein_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/fat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_protein" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/food_fat_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/food_fat"
        app:layout_constraintEnd_toStartOf="@id/fat_text"
        app:layout_constraintTop_toTopOf="@id/food_fat"
        tools:text="5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        android:text="@string/gram"
        app:layout_constraintBottom_toBottomOf="@id/food_fat_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/food_fat_value" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/food_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:hint="Enter the amoung of food"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_fat" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/food_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/gram"
        app:layout_constraintBottom_toBottomOf="@id/food_value"
        app:layout_constraintStart_toEndOf="@id/food_value"
        app:layout_constraintTop_toTopOf="@id/food_value" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/save"
        app:icon="@drawable/ic_food_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_value" />


</androidx.constraintlayout.widget.ConstraintLayout>